--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Samy Bahi" />
+    <meta
+      name="description"
+      content="Awesome task manager web app inspired by Microsoft Todo !"
+    />
     <title>Vite + React + TS</title>
   </head>
   <body>
