--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Awesome task manager web app inspired by Microsoft Todo !"
     />
-    <title>Vite + React + TS</title>
+    <title>SBFocus</title>
   </head>
   <body>
     <div id="root"></div>
